--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
   <section class="section container">
     <span class="eyebrow">Trusted by</span>
     <div class="clients" aria-label="Client logos">
-      <span class="logo-pill">FintechCo</span>
-      <span class="logo-pill">SaaS Global</span>
-      <span class="logo-pill">RetailCorp</span>
-      <span class="logo-pill">CloudWorks</span>
-      <span class="logo-pill">Energy+</span>
-      <span class="logo-pill">HealthTech</span>
-      <span class="logo-pill">LogiX</span>
+      <span class="logo-pill">berggruen car company</span>
+      <span class="logo-pill">Atitara Technologies</span>
+      <span class="logo-pill">Balaji Builders</span>
+      <span class="logo-pill">RR Reality</span>
+      <span class="logo-pill">Career Excellence</span>
+      <span class="logo-pill">Car Club</span>
+      <span class="logo-pill">Olive Tree OTBG</span>
     </div>
   </section>
 
