--- a/about.html
+++ b/about.html
@@ -284,9 +284,9 @@
     <h2>Trusted by high-growth teams</h2>
     <div class="carousel" aria-roledescription="carousel">
       <div class="track">
-        <article class="slide"><p class="quote">“OBLIQ reconfigured our HQ to support hybrid work without sacrificing focus or culture. On time, on budget.”</p><p class="who">— Priya N., COO, Fintech</p></article>
-        <article class="slide"><p class="quote">“The team balanced aesthetics and engineering. Our new customer floors improved NPS within a quarter.”</p><p class="who">— Anirudh K., VP Real Estate, SaaS</p></article>
-        <article class="slide"><p class="quote">“Exceptional collaboration with our GC and vendors. The interior details uplift the brand every day.”</p><p class="who">— Meera S., Head of Workplace, Consumer</p></article>
+        <article class="slide"><p class="quote"> “Exceptional collaboration with Obliq Associates. The interior details uplift the brand every day.”   .</p><p class="who">— Rajesh Ramachandran., Country head, car club.</p></article>
+        <article class="slide"><p class="quote">“Obliq Associates reconfigured our office space to support hybrid work without sacrificing focus or culture. On time, on budget.” </p><p class="who">— Naveen G, Founder, Atitara Technologies.</p></article>
+        <article class="slide"><p class="quote">"Obliq Associates designed our row house beautifully — practical, modern, and exactly what we needed. Professional, creative, and easy to work with. Highly recommended!”</p><p class="who"> Sriram Iyer, proprietor, Balaji Builders</p></article>
       </div>
       <div class="car-nav"><button class="car-btn" aria-label="Previous">‹</button><button class="car-btn" aria-label="Next">›</button></div>
     </div>
