--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,8 @@
 <style>
   :root{
     --c0:#F8FAFC; --c1:#D9EAFD; --c2:#BCCCDC; --c3:#9AA6B2;
-    --paper:var(--c0); --ink:#1a202c; --muted:#9AA6B2; --line:#BCCCDC;
+    --paper:var(--c0); --ink:#1a202c; --muted:#64748b; --line:#e2e8f0;
+    --accent:var(--c1); --accent-2:var(--c2);
     --glass:rgba(255,255,255,.75);
     --shadow-1:0 10px 30px rgba(0,0,0,.06);
     --shadow-2:0 18px 55px rgba(0,0,0,.12);
@@ -19,168 +20,142 @@
     --body:1rem;
   }
   *{box-sizing:border-box}
-  body{margin:0; font:400 var(--body)/1.6 ui-sans-serif,system-ui,-apple-system,'Segoe UI',Roboto,Arial; color:var(--ink); background:var(--paper)}
+  body{margin:0; font:400 var(--body)/1.6 ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Arial; color:var(--ink); background:var(--paper)}
+  a{color:inherit; text-decoration:none}
   .container{width:min(1200px,92%); margin-inline:auto}
-  a, a:visited { color: var(--ink); text-decoration: none; }
-  a:hover { opacity:.85; }
 
   .site-header{position:sticky; top:0; z-index:50; backdrop-filter:saturate(140%) blur(12px); background:var(--glass); border-bottom:1px solid var(--line)}
   .nav{display:flex; align-items:center; justify-content:space-between; gap:20px; padding:14px 0}
   .brand{display:flex; align-items:center; gap:12px; font-weight:800}
-  .brand img{height:36px; width:auto; border-radius:8px}
   .nav-links{display:flex; gap:22px; align-items:center}
   .nav-links a{padding:8px 10px; border-radius:10px; color:#475569}
-  .nav-links a:hover,.nav-links a.active{background:rgba(217,234,253,.45); color:var(--ink)}
-  .menu-toggle{display:none}
+  .nav-links a:hover,.nav-links a.active{background:rgba(217,234,253,.55); color:var(--ink)}
+  .menu-toggle{display:none; border:0; background:transparent; padding:8px}
+  .menu-toggle span{display:block; width:24px; height:2px; background:#111; margin:5px 0; border-radius:2px}
   @media (max-width:860px){
     .menu-toggle{display:block}
     .nav-links{position:fixed; inset:64px 0 auto 0; background:var(--paper); border-bottom:1px solid var(--line); padding:16px; display:none; flex-direction:column}
     .nav-links.open{display:flex}
   }
 
-  .page-head{padding:0; border-bottom:none; background:none}
-
-  .intro-split-section { background:#000; color:#f9fafb; padding:60px 0; }
-  .intro-split {
-    display:grid; grid-template-columns:1fr 1fr; gap:32px; align-items:center;
-    width:min(1200px,92%); margin:0 auto;
-  }
-  .intro-split h2{color:#ffffff}
-  .intro-split p{color:#e5e7eb}
-  .video-frame{position:relative; border-radius:16px; overflow:hidden; background:transparent; border:none}
-  .video-frame video{width:100%; height:auto; display:block; border-radius:16px}
-  @media(max-width:840px){.intro-split{grid-template-columns:1fr}}
-
-  .grid{display:grid; grid-template-columns:repeat(3,1fr); gap:16px; padding:24px 0 64px}
-  .card{background:#fff; border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow-1); display:flex; flex-direction:column}
-  .thumb{aspect-ratio:16/10; object-fit:cover; width:100%}
-  .meta{padding:14px}
-  .title{font-weight:800}
-  .subtle{color:#64748b}
-
-  .footer{background:#0f172a; color:#d1d5db; padding:60px 0 30px}
+  .section{padding:clamp(56px,8vw,96px) 0}
+  .footer{background:#0f172a; color:#d1d5db; padding:60px 0 30px; margin-top:40px}
   .footer a{color:#e5e7eb}
   .f-grid{display:grid; grid-template-columns:1.2fr 1fr 1fr .8fr; gap:20px}
   .f-title{color:#fff; font-weight:800; margin-bottom:10px}
   .copyright{border-top:1px solid #2b3240; text-align:center; padding-top:18px; margin-top:28px; color:#93a1b5; font-size:.95rem}
+
+  .btn{display:inline-flex; align-items:center; gap:10px; padding:12px 18px; border-radius:12px; border:1px solid var(--line); background:#fff; font-weight:700; cursor:pointer; box-shadow:var(--shadow-1)}
+  .btn.primary{background:linear-gradient(90deg, var(--c3), var(--c2)); color:#0f172a; border-color:transparent}
 </style>
 </head>
 <body>
-  <header class="site-header">
+    
+<script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.53/build/spline-viewer.js"></script>
+<header class="site-header">
     <div class="container nav">
       <a class="brand" href="index.html">
-        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1756871062/Favicon_jbspde.png" alt="OBLIQ ASSOCIATES Logo">
+        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1756871062/Favicon_jbspde.png" alt="OBLIQ ASSOCIATES Logo" class="logo" style="height:36px;width:auto;border-radius:8px">
         OBLIQ ASSOCIATES
       </a>
       <button class="menu-toggle" aria-label="Toggle menu"><span></span><span></span><span></span></button>
       <nav class="nav-links" aria-label="Primary">
         <a href="index.html">Home</a>
-        <a href="projects.html" class="active">Projects</a>
         <a href="about.html">About</a>
-        <a href="ideas.html">Insights</a>
+        <a href="projects.html" class="active" aria-current="page">Projects</a>
+        <a href="sustainability.html">Sustainability</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
-
-  <section class="page-head">
-    <spline-viewer url="https://prod.spline.design/etyDUqiN-vx9TpZU/scene.splinecode"></spline-viewer>
-  </section>
-  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.53/build/spline-viewer.js"></script>
-
-  <section class="intro-split-section" id="intro-split-section">
-    <div class="intro-split">
-      <div>
-        <h2>Space Planning & Workplace Strategy</h2>
-        <p>We craft agile floorplates, collaborative neighborhoods and tech-ready systems that support hybrid work and future growth. Our space planning approach balances wellness, daylight, acoustic comfort and adjacency planning for teams to thrive.</p>
-      </div>
-      <div class="video-frame">
-        <video id="strategyVideo" muted loop playsinline preload="none">
-          <source src="https://res.cloudinary.com/dvpmvben2/video/upload/v1756815861/WORK_SPACE-4-1-1_hfxaxw.mov" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-      </div>
+<section class="page-head">
+  <spline-viewer url="https://prod.spline.design/etyDUqiN-vx9TpZU/scene.splinecode"></spline-viewer>
+</section>
+<section class="section" style="background:#000;color:#f9fafb">
+  <div class="container" style="display:grid;grid-template-columns:1fr 1fr;gap:32px;align-items:center">
+    <div>
+      <h2 style="color:#fff">Space Planning & Workplace Strategy</h2>
+      <p style="color:#e5e7eb">We craft agile floorplates, collaborative neighborhoods and tech-ready systems that support hybrid work and future growth.</p>
     </div>
+    <div style="border-radius:16px;overflow:hidden">
+      <video muted loop playsinline preload="none" id="strategyVideo" style="width:100%;display:block;border-radius:16px">
+        <source src="https://res.cloudinary.com/dvpmvben2/video/upload/v1756815861/WORK_SPACE-4-1-1_hfxaxw.mov" type="video/mp4" />
+      </video>
+    </div>
+  </div>
+</section>
+<main class="container">
+  <h2>Selected Projects</h2>
+  <section class="grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:16px; padding:24px 0 64px">
+    
+    <article class="card" style="background:#fff; border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow-1); display:flex; flex-direction:column">
+      <img class="thumb" src="images/projects/fintech-hq-bengaluru.jpg" alt="Fintech HQ in Bengaluru — workplace design" style="aspect-ratio:16/10; object-fit:cover; width:100%"/>
+      <div class="meta" style="padding:14px"><div class="title" style="font-weight:800">Fintech HQ — Bengaluru</div><div class="subtle" style="color:#64748b">180,000 sq.ft · Office</div></div>
+    </article>
+    <article class="card" style="background:#fff; border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow-1); display:flex; flex-direction:column">
+      <img class="thumb" src="images/projects/core-shell-upgrade-hyderabad.jpg" alt="Core and shell upgrade in Hyderabad — commercial infrastructure" style="aspect-ratio:16/10; object-fit:cover; width:100%"/>
+      <div class="meta" style="padding:14px"><div class="title" style="font-weight:800">Core & Shell Upgrade — Hyderabad</div><div class="subtle" style="color:#64748b">Commercial Infrastructure</div></div>
+    </article>
+    <article class="card" style="background:#fff; border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow-1); display:flex; flex-direction:column">
+      <img class="thumb" src="images/projects/customer-floors-mumbai.jpg" alt="Customer floors in Mumbai — interior with hospitality layer" style="aspect-ratio:16/10; object-fit:cover; width:100%"/>
+      <div class="meta" style="padding:14px"><div class="title" style="font-weight:800">Customer Floors — Mumbai</div><div class="subtle" style="color:#64748b">Interior · Hospitality layer</div></div>
+    </article>
+    <article class="card" style="background:#fff; border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow-1); display:flex; flex-direction:column">
+      <img class="thumb" src="images/projects/saas-campus-chennai.jpg" alt="Global SaaS Campus in Chennai — campus planning" style="aspect-ratio:16/10; object-fit:cover; width:100%"/>
+      <div class="meta" style="padding:14px"><div class="title" style="font-weight:800">Global SaaS Campus — Chennai</div><div class="subtle" style="color:#64748b">Office campus planning</div></div>
+    </article>
+    <article class="card" style="background:#fff; border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow-1); display:flex; flex-direction:column">
+      <img class="thumb" src="images/projects/rd-collab-hub-pune.jpg" alt="R&D collaboration hub in Pune — interior" style="aspect-ratio:16/10; object-fit:cover; width:100%"/>
+      <div class="meta" style="padding:14px"><div class="title" style="font-weight:800">R&D Collaboration Hub — Pune</div><div class="subtle" style="color:#64748b">Interior</div></div>
+    </article>
+    <article class="card" style="background:#fff; border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow-1); display:flex; flex-direction:column">
+      <img class="thumb" src="images/projects/utility-retrofit-gurugram.jpg" alt="Utility retrofit in Gurugram — commercial infrastructure" style="aspect-ratio:16/10; object-fit:cover; width:100%"/>
+      <div class="meta" style="padding:14px"><div class="title" style="font-weight:800">Utility Retrofit — Gurugram</div><div class="subtle" style="color:#64748b">Commercial Infra</div></div>
+    </article>
   </section>
-
-  <main class="container">
-    <h2>Selected Projects</h2>
-    <section class="grid">
-      <article class="card">
-        <img class="thumb" src="images/projects/fintech-hq-bengaluru.jpg" alt="Fintech HQ in Bengaluru — workplace design"/>
-        <div class="meta"><div class="title">Fintech HQ — Bengaluru</div><div class="subtle">180,000 sq.ft · Office</div></div>
-      </article>
-      <article class="card">
-        <img class="thumb" src="images/projects/core-shell-upgrade-hyderabad.jpg" alt="Core and shell upgrade in Hyderabad — commercial infrastructure"/>
-        <div class="meta"><div class="title">Core & Shell Upgrade — Hyderabad</div><div class="subtle">Commercial Infrastructure</div></div>
-      </article>
-      <article class="card">
-        <img class="thumb" src="images/projects/customer-floors-mumbai.jpg" alt="Customer floors in Mumbai — interior with hospitality layer"/>
-        <div class="meta"><div class="title">Customer Floors — Mumbai</div><div class="subtle">Interior · Hospitality layer</div></div>
-      </article>
-      <article class="card">
-        <img class="thumb" src="images/projects/saas-campus-chennai.jpg" alt="Global SaaS Campus in Chennai — campus planning"/>
-        <div class="meta"><div class="title">Global SaaS Campus — Chennai</div><div class="subtle">Office campus planning</div></div>
-      </article>
-      <article class="card">
-        <img class="thumb" src="images/projects/rd-collab-hub-pune.jpg" alt="R&D collaboration hub in Pune — interior"/>
-        <div class="meta"><div class="title">R&D Collaboration Hub — Pune</div><div class="subtle">Interior</div></div>
-      </article>
-      <article class="card">
-        <img class="thumb" src="images/projects/utility-retrofit-gurugram.jpg" alt="Utility retrofit in Gurugram — commercial infrastructure"/>
-        <div class="meta"><div class="title">Utility Retrofit — Gurugram</div><div class="subtle">Commercial Infra</div></div>
-      </article>
-    </section>
-  </main>
-
-  <footer class="footer">
+</main>
+<footer class="footer">
     <div class="container f-grid">
       <div>
         <div class="f-title">OBLIQ ASSOCIATES</div>
-        <p>Architecture for office, commercial infrastructure & interiors.</p>
+        <p>Architecture for office, commercial infrastructure &amp; interiors.</p>
         <p>Bengaluru, Karnataka, India</p>
       </div>
       <div>
         <div class="f-title">Company</div>
         <p><a href="about.html">About</a></p>
         <p><a href="projects.html">Projects</a></p>
-        <p><a href="ideas.html">Insights</a></p>
+        <p><a href="sustainability.html">Sustainability</a></p>
         <p><a href="contact.html">Contact</a></p>
       </div>
       <div>
         <div class="f-title">Connect</div>
         <p><a href="mailto:info@obliqassociates.com">info@obliqassociates.com</a></p>
-        <p><a href="https://www.linkedin.com/company/obliqassociates" target="_blank" rel="noopener">LinkedIn</a></p>
-        <p><a href="https://www.instagram.com/obliqassociates" target="_blank" rel="noopener">Instagram</a></p>
+        <p><a href="https://www.linkedin.com/company/obliq-associates/" target="_blank" rel="noopener">LinkedIn</a></p>
+        <p><a href="https://www.instagram.com/obliqassociates/" target="_blank" rel="noopener">Instagram</a></p>
       </div>
       <div>
         <div class="f-title">Start</div>
-        <a class="btn primary" href="contact.html">Book a consultation</a>
+        <a class="btn primary" href="contact.html">Start a project</a>
       </div>
     </div>
     <div class="container copyright">© 2025 OBLIQ ASSOCIATES. All rights reserved.</div>
   </footer>
-
+<script>
+  (function(){
+    const section = document.querySelector('section[style*="background:#000"]');
+    const video = document.getElementById('strategyVideo');
+    if(!section || !video) return;
+    const io = new IntersectionObserver((entries)=>{
+      entries.forEach(e=> e.isIntersecting ? video.play().catch(()=>{}) : video.pause());
+    }, {threshold:.5});
+    io.observe(section);
+  })();
+</script>
 <script>
   const toggle=document.querySelector('.menu-toggle');
   const links=document.querySelector('.nav-links');
   toggle?.addEventListener('click',()=>links.classList.toggle('open'));
-  (function(){
-    const section = document.getElementById('intro-split-section');
-    const video = document.getElementById('strategyVideo');
-    if(!section || !video) return;
-    let userInteracted = false;
-    const tryPlay = () => video.play().catch(()=>{});
-    ['touchstart','click'].forEach(evt => {
-      window.addEventListener(evt, () => {
-        if (!userInteracted) { userInteracted = true; tryPlay(); }
-      }, { once: true });
-    });
-    const io = new IntersectionObserver((entries)=>{
-      entries.forEach(entry=>{ if(entry.isIntersecting){ tryPlay(); } else { video.pause(); } });
-    }, { threshold: 0.5 });
-    io.observe(section);
-  })();
 </script>
 </body>
 </html>
