--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
   <!-- Presence -->
   <section class="section container">
-    <span class="eyebrow" style="display:inline-block; letter-spacing:.14em; text-transform:uppercase; color:#64748b; font-weight:800; font-size:.76rem; margin-bottom:8px">Global presence</span>
+    <span class="eyebrow" style="display:inline-block; letter-spacing:.14em; text-transform:uppercase; color:#64748b; font-weight:800; font-size:.76rem; margin-bottom:8px">Presence</span>
     <h2 style="font-size:var(--h2)">Delivering across India</h2>
     <div class="world" role="img" aria-label="Key Indian cities we deliver in">
       <!-- Inline SVG (guaranteed to render) -->
