--- a/about.html
+++ b/about.html
@@ -136,10 +136,10 @@
     <span class="eyebrow">How we work</span>
     <h2>Clear, collaborative, accountable</h2>
     <div class="timeline">
-      <div class="step"><div><div class="dot"></div><div class="line" style="height:70%"></div></div><div><h3>01 — Discovery</h3><p>Brief, stakeholders, metrics for success, due diligence of site & code.</p></div></div>
-      <div class="step"><div><div class="dot"></div><div class="line" style="height:70%"></div></div><div><h3>02 — Concept & Strategy</h3><p>Test-fits, narratives, material direction and cost plan alignment.</p></div></div>
-      <div class="step"><div><div class="dot"></div><div class="line" style="height:70%"></div></div><div><h3>03 — Technical Design</h3><p>Drawings, BIM, services coordination and authority submissions.</p></div></div>
-      <div class="step"><div><div class="dot"></div></div><div><h3>04 — Build & Handover</h3><p>Quality control, commissioning, training and post-occupancy review.</p></div></div>
+      <div class="step"><div><div class="dot"></div><div class="line" style="height:70%"></div></div><div><h3>01 - Discovery</h3><p>Brief, stakeholders, metrics for success, due diligence of site & code.</p></div></div>
+      <div class="step"><div><div class="dot"></div><div class="line" style="height:70%"></div></div><div><h3>02 - Concept & Strategy</h3><p>Test-fits, narratives, material direction and cost plan alignment.</p></div></div>
+      <div class="step"><div><div class="dot"></div><div class="line" style="height:70%"></div></div><div><h3>03 - Technical Design</h3><p>Drawings, BIM, services coordination and authority submissions.</p></div></div>
+      <div class="step"><div><div class="dot"></div></div><div><h3>04 - Build & Handover</h3><p>Quality control, commissioning, training and post-occupancy review.</p></div></div>
     </div>
   </section>
 
