--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <text x="532" y="182">Pune</text>
         </g>
       </svg>
-      <div style="color:#64748b; margin-top:8px">Bengaluru · Mumbai · Pune · Hyderabad · Chennai · Ahmedabad · Kolkata · Nagpur</div>
+      <div style="color:#64748b; margin-top:8px">Bengaluru · Mumbai · Pune · Hyderabad · Chennai</div>
     </div>
   </section>
 
