--- a/contact.html
+++ b/contact.html
@@ -78,17 +78,18 @@
     .f-title{color:#fff; font-weight:800; margin-bottom:10px}
     .copyright{border-top:1px solid #2b3240; text-align:center; padding-top:18px; margin-top:28px; color:#93a1b5; font-size:.95rem}
 </style>
+  <link rel="stylesheet" href="assets/updater.css">
 </head>
 <body>
     <!-- Header -->
-    <header class="site-header">
+    <header class="site-header header--transparent">
         <div class="container nav">
             <a class="brand" href="index.html">
-                <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1756871062/Favicon_jbspde.png" alt="OBLIQ ASSOCIATES Logo">
+                <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1757580005/Screenshot_2025-09-11_at_2.08.02_PM_p2euse.png" alt="OBLIQ ASSOCIATES Logo">
                 OBLIQ ASSOCIATES
             </a>
             <button class="menu-toggle" aria-label="Toggle menu"><span></span><span></span><span></span></button>
-            <nav class="nav-links" aria-label="Primary">
+            <nav class="nav-links header--transparent" aria-label="Primary">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="projects.html">Projects</a>
@@ -200,7 +201,7 @@
             </div>
             <div>
                 <div class="f-title">Start</div>
-                <a class="btn primary" href="contact.html">Start a Project</a>
+                <a class="btn-start-project btn primary" href="contact.html">Start a Project</a>
             </div>
         </div>
         <div class="container copyright">© 2025 OBLIQ ASSOCIATES. All rights reserved.</div>
