--- a/about.html
+++ b/about.html
@@ -80,17 +80,18 @@
   @media (max-width:960px){ .f-grid{grid-template-columns:1fr 1fr} }
   @media (max-width:640px){ .f-grid{grid-template-columns:1fr} }
 </style>
+  <link rel="stylesheet" href="assets/updater.css">
 </head>
 <body>
   <!-- Header -->
-  <header class="site-header">
+  <header class="site-header header--transparent">
     <div class="container nav">
       <a class="brand" href="index.html">
-        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1756871062/Favicon_jbspde.png" alt="OBLIQ ASSOCIATES Logo">
+        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1757580005/Screenshot_2025-09-11_at_2.08.02_PM_p2euse.png" alt="OBLIQ ASSOCIATES Logo">
         OBLIQ ASSOCIATES
       </a>
       <button class="menu-toggle" aria-label="Toggle menu"><span></span><span></span><span></span></button>
-      <nav class="nav-links" aria-label="Primary">
+      <nav class="nav-links header--transparent" aria-label="Primary">
         <a href="index.html">Home</a>
         <a href="about.html" class="active" aria-current="page">About</a>
         <a href="projects.html">Projects</a>
@@ -159,7 +160,7 @@
       <div><div class="f-title">OBLIQ ASSOCIATES</div><p>Architecture for office, commercial infrastructure & interiors.</p><p>Bengaluru, Karnataka, India</p></div>
       <div><div class="f-title">Company</div><p><a href="about.html">About</a></p><p><a href="projects.html">Projects</a></p><p><a href="sustainability.html">Sustainability</a></p><p><a href="contact.html">Contact</a></p></div>
       <div><div class="f-title">Connect</div><p><a href="mailto:info@obliqassociates.com">info@obliqassociates.com</a></p><p><a href="https://www.linkedin.com/company/obliq-associates/" target="_blank" rel="noopener">LinkedIn</a></p><p><a href="https://www.instagram.com/obliqassociates/#" target="_blank" rel="noopener">Instagram</a></p></div>
-      <div><div class="f-title">Start</div><a class="btn primary" href="contact.html">Start a Project</a></div>
+      <div><div class="f-title">Start</div><a class="btn-start-project btn primary" href="contact.html">Start a Project</a></div>
     </div>
     <div class="container copyright">© 2025 OBLIQ ASSOCIATES. All rights reserved.</div>
   </footer>
