--- a/index.html
+++ b/index.html
@@ -129,17 +129,18 @@
   @media (max-width:960px){ .f-grid{grid-template-columns:1fr 1fr} }
   @media (max-width:640px){ .f-grid{grid-template-columns:1fr} }
 </style>
+  <link rel="stylesheet" href="assets/updater.css">
 </head>
 <body>
   <!-- Header -->
-  <header class="site-header">
+  <header class="site-header header--transparent">
     <div class="container nav">
       <a class="brand" href="index.html">
-        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1756871062/Favicon_jbspde.png" alt="OBLIQ ASSOCIATES Logo">
+        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1757580005/Screenshot_2025-09-11_at_2.08.02_PM_p2euse.png" alt="OBLIQ ASSOCIATES Logo">
         OBLIQ ASSOCIATES
       </a>
       <button class="menu-toggle" aria-label="Toggle menu"><span></span><span></span><span></span></button>
-      <nav class="nav-links" aria-label="Primary">
+      <nav class="nav-links header--transparent" aria-label="Primary">
         <a href="index.html" class="active" aria-current="page">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
@@ -152,9 +153,9 @@
   <!-- ---------- STICKY VIDEO ZONE (scroll-driven text + late metric) ---------- -->
   <section class="video-zone" id="videoZone">
     <div class="sticky-layer">
-      <video id="bgVideo" class="bg-video" autoplay muted loop playsinline preload="metadata" poster="">
+      <div class="hero-video-container"><video id="bgVideo" class="bg-video" autoplay muted loop playsinline preload="metadata" poster="">
         <source src="https://res.cloudinary.com/dvpmvben2/video/upload/v1754466739/skdnfs_1_1_nlm7po.mp4" type="video/mp4">
-      </video>
+      </video></div>
       <div class="scrim" aria-hidden="true"></div>
 
       <!-- Center messages -->
@@ -324,7 +325,7 @@
       </div>
       <div>
         <div class="f-title">Start</div>
-        <a class="btn primary" href="contact.html">Start a Project</a>
+        <a class="btn-start-project btn primary" href="contact.html">Start a Project</a>
       </div>
     </div>
     <div class="container copyright">© 2025 OBLIQ ASSOCIATES. All rights reserved.</div>
