--- a/sustainability.html
+++ b/sustainability.html
@@ -196,17 +196,18 @@
   @media (max-width:960px){ .f-grid{grid-template-columns:1fr 1fr} }
   @media (max-width:640px){ .f-grid{grid-template-columns:1fr} }
 </style>
+  <link rel="stylesheet" href="assets/updater.css">
 </head>
 <body>
   <!-- Header -->
-  <header class="site-header">
+  <header class="site-header header--transparent">
     <div class="container nav">
       <a class="brand" href="index.html">
-        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1756871062/Favicon_jbspde.png" alt="OBLIQ ASSOCIATES Logo">
+        <img src="https://res.cloudinary.com/dvpmvben2/image/upload/v1757580005/Screenshot_2025-09-11_at_2.08.02_PM_p2euse.png" alt="OBLIQ ASSOCIATES Logo">
         OBLIQ ASSOCIATES
       </a>
       <button class="menu-toggle" aria-label="Toggle menu"><span></span><span></span><span></span></button>
-      <nav class="nav-links" aria-label="Primary">
+      <nav class="nav-links header--transparent" aria-label="Primary">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
